--- a/index.css
+++ b/index.css
@@ -1,41 +1,157 @@
-body {
-    background-image: url(./bulud.jpg);
-    background-size:cover;
-    
-}
-
-.inf {
-    background-color:white ;
-    margin-top: 50px;
+.container{
     margin-left: 400px;
-    height: 500px;
-    width: 600px ;
-    font-size: larger;
-    border-radius: 10px;
+    width: 800px;
+    height: 100px;
+    padding-left: 100px;
     
+
 }
 
-.inp {
-    margin-top: 40px;
-    margin-left: 500px;
-    width: 400px;
-    height: 50px;
-    border-radius: 10px;
+
+#inp {
     text-align: center;
+    width: 300px;
+    height: 40px;
+    border-radius: 10px;
+    margin-top: 50px;
+    font-style: italic;
+    font-size: larger;
+}
+.btn {
+    height: 40px;
+    width: 80px;
+    border-radius: 10px;
+    background-color: red;
+    color: white;
 }
 
-#btn {
-    margin-left: 20px;
-    
+.weather {
+    margin-top: 60px;
+    width: 390px;
+    height: 500px;
+    margin-left: 500px;
+    border-style:double ;
+    border-width: thick;
+    border-color: darkorchid;
+    border-inline-color: green;
+    border-bottom-left-radius:90px ;
+    border-top-right-radius:90px ;
 }
-.svg {
-    width: 50px;
-    height: 60px;
+
+#image-icon {
+    width: 200px;
+    padding-left: 100px;
     
+} 
+#city {
+    padding-left: 150px;
+    font-style: italic;
+    color:cornflowerblue;
 }
-img{
-    width: 140px;
-    height: 140px;
+
+h3{
+    /* padding-left: 170px; */
+    font-size: xx-large;
+    background-color: blue;
+    border-radius: 100%;
+    width: 200px;
     margin-left: 100px;
-    
+    text-align:center;
 }
+
+.lead {
+    padding-left: 150px;
+    font-style: italic;
+    color:cornflowerblue;
+}
+
+
+
+@media screen and (max-width: 480px) {
+
+    body {
+        background: url("./wp10934512-hot-weather-wallpapers.jpg") ;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: left;
+        height: 100vh;
+    }
+
+    .container{
+        margin-left: 10px;
+        width: 10px;
+        height: 100px;
+        
+    }
+        
+    #inp {
+        text-align: center;
+        width: 190px;
+        height: 40px;
+        border-radius: 10px;
+        margin-top: 50px;
+        font-style: italic;
+        font-size: larger;
+    }
+    .btn {
+        height: 40px;
+        width: 80px;
+        border-radius: 10px;
+        background-color: red;
+        color: white;
+        margin-left: 50px;
+    }
+
+
+
+    .weather {
+        margin-top: 60px;
+        width: 200px;
+        height: 500px;
+        margin-left: 80px;
+        border-style:double ;
+        border-width: thick;
+        border-color: darkorchid;
+        border-inline-color: green;
+        border-bottom-left-radius:90px ;
+        border-top-right-radius:90px ;
+    }
+    
+    #image-icon {
+        width: 200px;
+        padding-left: 10px;
+        
+    } 
+    #city {
+        padding-left: 50px;
+        font-style: italic;
+        color:cornflowerblue;
+    }
+    
+    h3{
+        font-size: xx-large;
+        background-color: blue;
+        border-radius: 100%;
+        width: 200px;
+        margin-left: 10px;
+        text-align:center;
+    }
+    
+    .lead {
+        padding-left: 150px;
+        font-style: italic;
+        color:cornflowerblue;
+        padding-left: 40px;
+    }
+
+
+
+
+    } 
+
+
+
+
+
+
+
